--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(2, 2, 2, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -35,6 +35,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbm4zZWJnY3ZvNHhtYWtnMGV4NWt2NXlmdTd2bGFib3RzNHQ1OXRrciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MZ39Eevy2nFjOSCivL/giphy.webp');
+  background-size: auto;
 }
 
 h1 {
